--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tremor/react": "2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "9.1.2"
+    "react-redux": "9.1.2",
+    "sonner": "^1.4.41"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.7.3",
